--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -24,4 +24,6 @@
         %td= link_to "More about #{movie.title}", movie_path(movie)
 
 = link_to 'Add new movie', new_movie_path
+= link_to 'Delete Movie by Rating or by title', movies_deletemovie_path
+= link_to 'Update Movie', movies_updatemov_path
 
